--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,7 @@
 
     <data>
 
-        <variable
-            name="playerManager"
-            type="com.zaze.tribe.util.MediaPlayerManager" />
+        <import type="com.zaze.tribe.util.MediaPlayerManager" />
 
     </data>
 
@@ -37,8 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/main_navigation_bar"
-                app:music="@{playerManager.curMusicData}"
-                app:playerManager="@{playerManager}" />
+                app:music="@{MediaPlayerManager.curMusicData}" />
 
 
             <android.support.design.widget.CoordinatorLayout
