--- a/app/src/main/res/layout/music_nav_bar.xml
+++ b/app/src/main/res/layout/music_nav_bar.xml
@@ -4,10 +4,12 @@
     <data>
 
         <variable
+            name="musicViewModel"
+            type="com.zaze.tribe.music.MusicViewModel"/>
+
+        <variable
             name="music"
             type="com.zaze.tribe.data.dto.MusicInfo" />
-
-        <import type="com.zaze.tribe.util.MediaPlayerManager" />
     </data>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -62,8 +64,8 @@
                     android:layout_toLeftOf="@id/music_nav_list_iv"
                     android:layout_toStartOf="@id/music_nav_list_iv"
                     android:contentDescription="@null"
-                    android:onClick="@{()->MediaPlayerManager.start(music)}"
-                    android:src="@{MediaPlayerManager.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}" />
+                    android:onClick="@{()-> musicViewModel.start(music)}"
+                    android:src="@{musicViewModel.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_4"
             android:max="10000"
-            android:progress="@{MediaPlayerManager.progress}"
+            android:progress="@{musicViewModel.progress}"
             android:progressDrawable="@drawable/progress_horizontal" />
 
         <View
