--- a/app/src/main/res/layout/music_notification_layout.xml
+++ b/app/src/main/res/layout/music_notification_layout.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/music_notification_icon_iv"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/dp_100"
+        android:minWidth="@dimen/dp_100"
+        android:scaleType="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
