--- a/app/src/main/res/layout/music_notification_layout.xml
+++ b/app/src/main/res/layout/music_notification_layout.xml
@@ -6,16 +6,19 @@
 
     <ImageView
         android:id="@+id/music_notification_icon_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_width="@dimen/dp_64"
+        android:layout_height="@dimen/dp_64"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:scaleType="fitStart"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_8"
+        android:scaleType="centerCrop"
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/music_notification_content_ll"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/music_notification_icon_iv"
         android:layout_alignTop="@id/music_notification_icon_iv"
@@ -29,6 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_4"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxWidth="@dimen/dp_100"
+            android:textSize="@dimen/sp_14"
             tools:text="权御天下" />
 
         <TextView
@@ -36,7 +43,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_4"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:maxWidth="@dimen/dp_100"
+            android:textColor="#5b5b5b"
+            android:textSize="@dimen/sp_12"
             tools:text="权御天下" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/music_notification_content_ll"
+        android:layout_alignTop="@id/music_notification_content_ll"
+        android:layout_toEndOf="@id/music_notification_content_ll"
+        android:layout_toRightOf="@id/music_notification_content_ll"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_play_circle_outline_black_24dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
