播放通知栏

--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -52,7 +52,7 @@
                     android:contentDescription="@null"
                     android:onClick="@{()-> viewModel.showMore(music)}"
                     android:scaleType="center"
-                    android:src="@drawable/ic_more_vert" />
+                    android:src="@drawable/ic_more_vert_black_24dp" />
 
 
                 <LinearLayout
