--- a/app/src/main/res/layout/music_nav_bar.xml
+++ b/app/src/main/res/layout/music_nav_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout>
 
     <data>
 
@@ -41,38 +41,44 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
 
-                <ImageView
-                    android:id="@+id/music_nav_list_iv"
-                    android:layout_width="@dimen/dp_32"
-                    android:layout_height="@dimen/dp_32"
+                <LinearLayout
+                    android:id="@+id/music_nav_menu_ll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_4"
-                    android:layout_marginRight="@dimen/dp_4"
-                    android:contentDescription="@null"
-                    android:src="@drawable/ic_more_vert" />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/music_nav_status_iv"
-                    android:layout_width="@dimen/dp_32"
-                    android:layout_height="@dimen/dp_32"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/dp_4"
-                    android:layout_marginRight="@dimen/dp_4"
-                    android:layout_toLeftOf="@id/music_nav_list_iv"
-                    android:layout_toStartOf="@id/music_nav_list_iv"
-                    android:contentDescription="@null"
-                    android:onClick="@{()-> musicViewModel.start(music)}"
-                    android:src="@{musicViewModel.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}"
-                    tools:src="@drawable/ic_play_circle_outline_black_24dp" />
+                    <ImageView
+                        android:id="@+id/music_nav_status_iv"
+                        android:layout_width="@dimen/dp_32"
+                        android:layout_height="@dimen/dp_32"
+                        android:layout_marginEnd="@dimen/dp_4"
+                        android:layout_marginRight="@dimen/dp_4"
+                        android:contentDescription="@null"
+                        android:onClick="@{()-> musicViewModel.start(music)}"
+                        android:src="@{musicViewModel.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}"
+                        tools:src="@drawable/ic_play_circle_outline_black_24dp" />
+
+                    <ImageView
+                        android:id="@+id/music_nav_list_iv"
+                        android:layout_width="@dimen/dp_32"
+                        android:layout_height="@dimen/dp_32"
+                        android:layout_marginLeft="@dimen/dp_4"
+                        android:layout_marginRight="@dimen/dp_4"
+                        android:contentDescription="@null"
+                        android:src="@drawable/ic_more_vert_black_24dp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_centerInParent="true"
-                    android:layout_toLeftOf="@id/music_nav_status_iv"
-                    android:layout_toStartOf="@id/music_nav_status_iv"
+                    android:layout_toLeftOf="@id/music_nav_menu_ll"
+                    android:layout_toStartOf="@id/music_nav_menu_ll"
                     android:orientation="vertical">
 
                     <TextView
@@ -84,7 +90,7 @@
                         android:text="@{music.name}"
                         android:textColor="#333333"
                         android:textSize="@dimen/sp_16"
-                        tools:text="极乐净土" />
+                        tools:text="极乐净土极乐净土极乐净土极乐净土极乐净土" />
 
                     <TextView
                         android:id="@+id/music_item_artist_tv"
