--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
                 <FrameLayout
                     android:id="@+id/main_content_fl"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     tools:background="@color/black" />
             </android.support.design.widget.CoordinatorLayout>
