封装MusicLoader 从 MediaStore 加载 music

--- a/app/src/main/res/drawable/progress_horizontal.xml
+++ b/app/src/main/res/drawable/progress_horizontal.xml
@@ -3,7 +3,7 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="90dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="@color/transparent" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
