--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@
                 android:id="@+id/main_navigation_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                tools:background="@color/grey" />
+                android:layout_alignParentBottom="true" />
 
             <fragment
                 android:id="@+id/music_mini_player_fl"
