--- a/app/src/main/res/layout/mini_player_frag.xml
+++ b/app/src/main/res/layout/mini_player_frag.xml
@@ -3,120 +3,118 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <import type="com.zaze.tribe.music.MusicPlayerRemote" />
 
     </data>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="@dimen/dp_4">
-
-            <ImageView
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_marginLeft="@dimen/dp_4"
-                android:layout_marginRight="@dimen/dp_4"
-                android:layout_marginTop="@dimen/dp_4"
-                android:contentDescription="@null"
-                android:scaleType="fitCenter"
-                app:bmp="@{MusicPlayerRemote.curMusicData}"
-                tools:src="@mipmap/ic_launcher" />
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center">
-
-                <LinearLayout
-                    android:id="@+id/mini_player_menu_ll"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/mini_player_status_iv"
-                        android:layout_width="@dimen/dp_32"
-                        android:layout_height="@dimen/dp_32"
-                        android:layout_marginEnd="@dimen/dp_4"
-                        android:layout_marginRight="@dimen/dp_4"
-                        android:contentDescription="@null"
-                        android:onClick="@{()-> MusicPlayerRemote.start()}"
-                        android:src="@{MusicPlayerRemote.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}"
-                        tools:src="@drawable/ic_play_circle_outline_black_24dp" />
-
-                    <ImageView
-                        android:id="@+id/mini_player_list_iv"
-                        android:layout_width="@dimen/dp_32"
-                        android:layout_height="@dimen/dp_32"
-                        android:layout_marginLeft="@dimen/dp_4"
-                        android:layout_marginRight="@dimen/dp_4"
-                        android:contentDescription="@null"
-                        android:src="@drawable/ic_more_vert_black_24dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerInParent="true"
-                    android:layout_toLeftOf="@id/mini_player_menu_ll"
-                    android:layout_toStartOf="@id/mini_player_menu_ll"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/mini_player_title_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLength="14"
-                        android:maxLines="1"
-                        android:text="@{MusicPlayerRemote.curMusicData.name}"
-                        android:textColor="#333333"
-                        android:textSize="@dimen/sp_16"
-                        tools:text="极乐净土极乐净土极乐净土极乐净土极乐净土" />
-
-                    <TextView
-                        android:id="@+id/mini_player_artist_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_4"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@{MusicPlayerRemote.curMusicData.artist}"
-                        android:textSize="@dimen/sp_14"
-                        tools:text="MARIA" />
-
-                </LinearLayout>
-
-            </RelativeLayout>
-        </LinearLayout>
+        android:layout_height="wrap_content"
+        android:foreground="@drawable/rect_selector"
+        android:orientation="vertical"
+        android:visibility="@{MusicPlayerRemote.curMusicData == null ? View.GONE : View.VISIBLE}">
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_4"
+            android:layout_height="@dimen/dp_2"
             android:max="10000"
             android:progress="@{MusicPlayerRemote.progress}"
             android:progressDrawable="@drawable/progress_horizontal" />
 
-        <View
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:layout_gravity="top"
-            android:layout_marginBottom="@dimen/dp_4"
-            android:background="@color/main_split_line" />
-    </FrameLayout>
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_4">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/mini_player_album_cv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_marginRight="@dimen/dp_4"
+                app:cardCornerRadius="@dimen/dp_4"
+                app:cardElevation="0dp">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:contentDescription="@null"
+                    android:scaleType="fitCenter"
+                    app:bmp="@{MusicPlayerRemote.curMusicData}"
+                    tools:src="@mipmap/ic_launcher" />
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/mini_player_menu_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/mini_player_status_iv"
+                    android:layout_width="@dimen/dp_28"
+                    android:layout_height="@dimen/dp_28"
+                    android:layout_marginEnd="@dimen/dp_4"
+                    android:layout_marginRight="@dimen/dp_4"
+                    android:contentDescription="@null"
+                    android:onClick="@{()-> MusicPlayerRemote.start()}"
+                    android:src="@{MusicPlayerRemote.isPaused?@drawable/ic_play_circle_outline_black_24dp:@drawable/ic_pause_circle_outline_black_24dp}"
+                    tools:src="@drawable/ic_play_circle_outline_black_24dp" />
+
+                <ImageView
+                    android:id="@+id/mini_player_list_iv"
+                    android:layout_width="@dimen/dp_28"
+                    android:layout_height="@dimen/dp_28"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginRight="@dimen/dp_4"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_more_vert_black_24dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/mini_player_menu_ll"
+                android:layout_toLeftOf="@id/mini_player_menu_ll"
+                android:layout_toEndOf="@id/mini_player_album_cv"
+                android:layout_toRightOf="@id/mini_player_album_cv"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/mini_player_title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLength="14"
+                    android:maxLines="1"
+                    android:text="@{MusicPlayerRemote.curMusicData.title}"
+                    android:textColor="#333333"
+                    android:textSize="@dimen/sp_14"
+                    tools:text="极乐净土极乐净土极乐净土极乐净土极乐净土" />
+
+                <TextView
+                    android:id="@+id/mini_player_artist_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_4"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@{MusicPlayerRemote.curMusicData.artistName}"
+                    android:textSize="@dimen/sp_12"
+                    tools:text="MARIA" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 </layout>
