--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -20,19 +20,31 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/rect_selector"
         android:gravity="center_vertical"
         android:onClick="@{()->MusicPlayerRemote.start(music)}"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/music_item_album_iv"
-            android:layout_width="@dimen/dp_48"
-            android:layout_height="@dimen/dp_48"
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_8"
-            android:contentDescription="@null"
-            android:scaleType="fitCenter"
-            app:bmp="@{music}"
-            tools:src="@mipmap/ic_launcher" />
+            app:cardCornerRadius="@dimen/dp_4"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:id="@+id/music_item_album_iv"
+                android:layout_width="@dimen/dp_48"
+                android:layout_height="@dimen/dp_48"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                app:bmp="@{music}"
+                tools:src="@mipmap/ic_launcher" />
+        </android.support.v7.widget.CardView>
+
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -41,8 +53,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/dp_4"
-                android:paddingTop="@dimen/dp_4">
+                android:paddingTop="@dimen/dp_4"
+                android:paddingBottom="@dimen/dp_4">
 
                 <ImageView
                     android:id="@+id/music_item_more_iv"
@@ -61,8 +73,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toLeftOf="@id/music_item_more_iv"
                     android:layout_toStartOf="@id/music_item_more_iv"
+                    android:layout_toLeftOf="@id/music_item_more_iv"
                     android:orientation="vertical">
 
                     <TextView
@@ -71,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="@{music.name}"
+                        android:text="@{music.title}"
                         android:textColor="#333333"
                         android:textSize="@dimen/sp_16"
                         tools:text="极乐净土" />
@@ -83,7 +95,7 @@
                         android:layout_marginTop="@dimen/dp_4"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="@{music.artist}"
+                        android:text="@{music.artistName}"
                         android:textSize="@dimen/sp_14"
                         tools:text="MARIA" />
 
