--- a/app/src/main/res/layout/music_notification_layout.xml
+++ b/app/src/main/res/layout/music_notification_layout.xml
@@ -2,19 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:foreground="@drawable/rect_selector">
 
     <ImageView
         android:id="@+id/music_notification_icon_iv"
         android:layout_width="@dimen/dp_48"
         android:layout_height="@dimen/dp_48"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/dp_8"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_8"
+        android:layout_margin="@dimen/dp_8"
+        android:contentDescription="@null"
         android:scaleType="centerCrop"
         tools:src="@mipmap/ic_launcher" />
 
@@ -22,8 +21,8 @@
         android:id="@+id/music_notification_content_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/music_notification_icon_iv"
         android:layout_alignTop="@id/music_notification_icon_iv"
+        android:layout_alignBottom="@id/music_notification_icon_iv"
         android:layout_toEndOf="@id/music_notification_icon_iv"
         android:layout_toRightOf="@id/music_notification_icon_iv"
         android:gravity="center_vertical"
@@ -35,8 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_4"
             android:ellipsize="end"
-            android:maxLines="1"
             android:maxWidth="@dimen/dp_100"
+            android:maxLines="1"
             android:textSize="@dimen/sp_14"
             tools:text="权御天下" />
 
@@ -46,8 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_4"
             android:ellipsize="end"
-            android:maxLines="1"
             android:maxWidth="@dimen/dp_100"
+            android:maxLines="1"
             android:textColor="#5b5b5b"
             android:textSize="@dimen/sp_12"
             tools:text="权御天下" />
@@ -57,10 +56,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@id/music_notification_content_ll"
         android:layout_alignBottom="@id/music_notification_content_ll"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/music_notification_content_ll"
         android:layout_toEndOf="@id/music_notification_content_ll"
         android:layout_toRightOf="@id/music_notification_content_ll"
         android:gravity="center_vertical|end"
