- base包整理 - viewModel 整理 - 实现AlbumCoverViewPager 滑动切换歌曲 - 开始着手music control ui

--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.zaze.tribe.music.MusicViewModel" />
+            type="com.zaze.tribe.music.MusicListViewModel" />
 
     </data>
 
