--- a/app/src/main/res/layout/music_album_cover_frag.xml
+++ b/app/src/main/res/layout/music_album_cover_frag.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <data>
-
-        <import type="com.zaze.tribe.music.MusicPlayerRemote" />
-
-    </data>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/music_album_cover_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/music_album_cover_view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:items="@{MusicPlayerRemote.playerList}" />
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
