--- a/app/src/main/res/layout/music_detail_act.xml
+++ b/app/src/main/res/layout/music_detail_act.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -15,17 +16,21 @@
                 android:id="@+id/music_detail_album_cover_fragment"
                 android:name="com.zaze.tribe.music.MusicAlbumCoverFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                tools:layout="@layout/album_cover_frag" />
 
         </com.zaze.tribe.view.WidthFitSquareLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/red">
+            android:layout_height="match_parent">
 
+            <fragment
+                android:id="@+id/music_detail_control_fragment"
+                android:name="com.zaze.tribe.music.MusicControlFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </FrameLayout>
-
 
     </LinearLayout>
 
