--- a/app/src/main/res/layout/music_list_frag.xml
+++ b/app/src/main/res/layout/music_list_frag.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.zaze.tribe.music.MusicViewModel" />
+            type="com.zaze.tribe.music.MusicListViewModel" />
     </data>
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
