--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,16 @@
 
     <color name="white">#FFFFFF</color>
     <color name="teal">#00796B</color>
+    <color name="red">#FFC93437</color>
     <color name="brown">#8D6E63</color>
     <color name="blue">#2196F3</color>
     <color name="grey_blue">#607D8B</color>
     <color name="grey">#999999</color>
     <color name="orange">#F57C00</color>
+    <color name="transparent">#00000000</color>
+
+
+
     <color name="half_trans">#80000000</color>
     <color name="main_split_line">#e1e1e1</color>
 
