--- a/app/src/main/res/layout/album_cover_frag.xml
+++ b/app/src/main/res/layout/album_cover_frag.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,14 +15,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/album_cover_iv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </com.zaze.tribe.view.WidthFitSquareLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </FrameLayout>
