--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -26,7 +26,7 @@
         android:orientation="horizontal">
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_8"
@@ -41,7 +41,7 @@
                 android:scaleType="fitCenter"
                 app:bmp="@{music}"
                 tools:src="@mipmap/ic_launcher" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
         <FrameLayout
