--- a/app/src/main/res/layout/album_cover_frag.xml
+++ b/app/src/main/res/layout/album_cover_frag.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/dp_16"
-        app:cardCornerRadius="@dimen/dp_8">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp">
 
         <com.zaze.tribe.view.WidthFitSquareLayout
             android:layout_width="match_parent"
