--- a/app/src/main/res/layout/music_control_frag.xml
+++ b/app/src/main/res/layout/music_control_frag.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <import type="com.zaze.tribe.music.MusicPlayerRemote" />
+
+        <import type="com.zaze.tribe.util.Utils" />
+
+
+    </data>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+
+        <androidx.appcompat.widget.AppCompatSeekBar
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="music control fragment" />
+            android:layout_height="wrap_content"
+            android:max="@{MusicPlayerRemote.duration}"
+            android:maxHeight="4dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
+            android:progress="@{MusicPlayerRemote.progress}"
+            tools:progress="30" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{Utils.getDurationString(MusicPlayerRemote.progress)}"
+                tools:text="11:11" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="@{Utils.getDurationString(MusicPlayerRemote.duration)}"
+                tools:text="11:11" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
