--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -29,14 +29,14 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_8"
-            app:cardCornerRadius="@dimen/dp_4"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="0dp">
 
             <ImageView
-                android:id="@+id/music_item_album_iv"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
+                android:id="@+id/music_item_album_cover"
+                android:layout_width="@dimen/album_cover_size_list"
+                android:layout_height="@dimen/album_cover_size_list"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
                 app:bmp="@{music}"
@@ -51,13 +51,13 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/dp_4"
-                android:paddingBottom="@dimen/dp_4">
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp">
 
                 <ImageView
-                    android:id="@+id/music_item_more_iv"
-                    android:layout_width="@dimen/dp_54"
-                    android:layout_height="@dimen/dp_54"
+                    android:id="@+id/music_item_more"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -71,30 +71,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_toStartOf="@id/music_item_more_iv"
-                    android:layout_toLeftOf="@id/music_item_more_iv"
+                    android:layout_toStartOf="@id/music_item_more"
+                    android:layout_toLeftOf="@id/music_item_more"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/music_item_title_tv"
+                        android:id="@+id/music_item_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="@{music.title}"
                         android:textColor="#333333"
-                        android:textSize="@dimen/sp_16"
+                        android:textSize="16sp"
                         tools:text="极乐净土" />
 
                     <TextView
-                        android:id="@+id/music_item_artist_tv"
+                        android:id="@+id/music_item_artist"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_4"
+                        android:layout_marginTop="4dp"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:text="@{music.artistName}"
-                        android:textSize="@dimen/sp_14"
+                        android:textSize="14sp"
                         tools:text="MARIA" />
 
                 </LinearLayout>
@@ -103,9 +103,9 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
+                android:layout_height="1dp"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="@dimen/dp_4"
+                android:layout_marginTop="4dp"
                 android:background="@color/main_split_line" />
         </FrameLayout>
 
