--- a/app/src/main/res/layout/music_notification_layout.xml
+++ b/app/src/main/res/layout/music_notification_layout.xml
@@ -7,12 +7,12 @@
 
     <ImageView
         android:id="@+id/music_notification_icon_iv"
-        android:layout_width="@dimen/dp_48"
-        android:layout_height="@dimen/dp_48"
+        android:layout_width="@dimen/album_cover_size_notify"
+        android:layout_height="@dimen/album_cover_size_notify"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_margin="@dimen/dp_8"
+        android:layout_margin="8dp"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         tools:src="@mipmap/ic_launcher" />
@@ -32,23 +32,23 @@
             android:id="@+id/music_notification_name_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_4"
+            android:layout_marginBottom="4dp"
             android:ellipsize="end"
-            android:maxWidth="@dimen/dp_100"
+            android:maxWidth="100dp"
             android:maxLines="1"
-            android:textSize="@dimen/sp_14"
+            android:textSize="14sp"
             tools:text="权御天下" />
 
         <TextView
             android:id="@+id/music_notification_auth_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
-            android:maxWidth="@dimen/dp_100"
+            android:maxWidth="100dp"
             android:maxLines="1"
             android:textColor="#5b5b5b"
-            android:textSize="@dimen/sp_12"
+            android:textSize="12sp"
             tools:text="权御天下" />
 
     </LinearLayout>
@@ -64,22 +64,22 @@
         android:layout_toRightOf="@id/music_notification_content_ll"
         android:gravity="center_vertical|end"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/dp_12"
-        android:paddingRight="@dimen/dp_12">
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp">
 
         <ImageView
             android:id="@+id/music_notification_play_iv"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_margin="@dimen/dp_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_play_circle_outline_black_24dp" />
 
         <ImageView
             android:id="@+id/music_notification_next_iv"
-            android:layout_width="@dimen/dp_32"
-            android:layout_height="@dimen/dp_32"
-            android:layout_margin="@dimen/dp_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_skip_next_black_24dp" />
 
@@ -87,7 +87,7 @@
             android:id="@+id/music_notification_close_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_4"
+            android:layout_margin="4dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_close_gray_24dp" />
 
